--- a/paywiser-frontend/src/app/home.css
+++ b/paywiser-frontend/src/app/home.css
@@ -1,4 +1,4 @@
-  .movies {
+  .TitleC {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -6,5 +6,19 @@
   
   .title {
     text-align: center;
-    margin: 30px;
+    margin: 155px;
+    border-radius: 15;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 60px;
+  }
+
+  .rounded-box {
+    border: 2px solid #000; 
+    border-radius: 8px; 
+    padding: 15px; 
+    width: fit-content; 
+    margin: 8px auto; 
+    background-color: #fdfdfd; 
+    text-align: center; 
+    font-size: 25px;
   }
