--- a/paywiser-frontend/src/app/home.css
+++ b/paywiser-frontend/src/app/home.css
@@ -9,14 +9,15 @@
     margin: 155px;
     border-radius: 15;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 60px;
+    font-size: 40px;
   }
 
   .rounded-box {
     border: 2px solid #000; 
     border-radius: 8px; 
     padding: 15px; 
-    width: fit-content; 
+    width: 600px; 
+    height: 260px;
     margin: 8px auto; 
     background-color: #fdfdfd; 
     text-align: center; 
