--- a/paywiser-frontend/src/app/home.css
+++ b/paywiser-frontend/src/app/home.css
@@ -1,25 +1,25 @@
-  .TitleC {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-  
-  .title {
-    text-align: center;
-    margin: 155px;
-    border-radius: 15;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 40px;
-  }
+.TitleC {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 
-  .rounded-box {
-    border: 2px solid #000; 
-    border-radius: 8px; 
-    padding: 15px; 
-    width: 600px; 
-    height: 260px;
-    margin: 8px auto; 
-    background-color: #fdfdfd; 
-    text-align: center; 
-    font-size: 25px;
-  }
+.title {
+  text-align: center;
+  margin: 155px;
+  border-radius: 15;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 40px;
+}
+
+.rounded-box {
+  border: 2px solid #f6b9f9;
+  border-radius: 8px;
+  padding: 15px;
+  width: 600px;
+  height: 260px;
+  margin: 8px auto;
+  background-color: #fdfdfd;
+  text-align: center;
+  font-size: 25px;
+}
