--- a/paywiser-frontend/src/app/home.css
+++ b/paywiser-frontend/src/app/home.css
@@ -1,25 +1,28 @@
-.TitleC {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+.main {
+  padding: 20px;
 }
-
-.title {
-  text-align: center;
-  margin: 155px;
-  border-radius: 15;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  font-size: 40px;
-}
-
 .rounded-box {
-  border: 2px solid #f6b9f9;
+  border: 2px solid #000;
   border-radius: 8px;
-  padding: 15px;
-  width: 600px;
-  height: 260px;
-  margin: 8px auto;
+  padding: 30px;
   background-color: #fdfdfd;
   text-align: center;
-  font-size: 25px;
+  font-size: 18px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 800px;
+  margin: 1 auto;
+}
+.box-image {
+  width: 250px; /* Adjust the width as needed */
+  height: auto; /* Maintain aspect ratio */
+  margin-bottom: 20px;
+  border-radius: 15px; /* Adjust the radius as needed */
+}
+.title {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+.TitleC {
+  margin-top: 20px;
 }
